@@ -46,10 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Column.cs" />
+    <Compile Include="AreEqualsFilter.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Engine.cs" />
+    <Compile Include="IRowFilter.cs" />
+    <Compile Include="IsNullFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Row.cs" />
+    <Compile Include="RowList.cs" />
     <Compile Include="Schema.cs" />
     <Compile Include="Table.cs" />
   </ItemGroup>
